# resume-sync

./: .env.example  .gitignore  README.md  main.py  main.tex  pyproject.toml
.github/workflows/: process-resume.yml
core/: config.py  types.py
core/database/: __init__.py  mongodb.py  redis_db.py
core/extractors/: __init__.py  file_extractor.py
core/parsers/: __init__.py  llm_parser.py
core/repositories/: abc.py  resume_repository.py
core/services/: resume_service.py
core/uploaders/: __init__.py  abc.py  pretty_print_uploader.py  redis_uploader.py
core/utils/: __init__.py  files.py  functional.py  processing.py
