[project]
name = "pdf-resume-parser"
version = "0.1.0"
requires-python = ">=3.12"

[tool.pyright]
include = ["core", "main.py"]
exclude = [
    "**/node_modules",
    "**/__pycache__",
    "**/.*",
    "tests"
]
pythonVersion = "3.12"
pythonPlatform = "All"
typeCheckingMode = "basic"
reportTypeCommentUsage = "error"
reportMissingParameterType = "error"
reportUnknownParameterType = "warning"
reportUnknownArgumentType = "warning"
reportUnknownMemberType = "warning"
reportMissingTypeStubs = false

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
py_version = 312
