[project]
name = "pdf-resume-parser"
version = "0.1.0"
requires-python = ">=3.12"

[tool.pyright]
include = ["core", "main.py"]
exclude = [
    "**/node_modules",
    "**/__pycache__",
    "**/.*",
]
pythonVersion = "3.12"
pythonPlatform = "All"
typeCheckingMode = "basic"
reportTypeCommentUsage = "error"
reportMissingParameterType = "error"
reportUnknownParameterType = "warning"
reportUnknownArgumentType = "warning"
reportUnknownMemberType = "warning"
reportMissingTypeStubs = false

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
py_version = 312

[tool.poetry]
name = "resume_parse_and_upload"
version = "0.1.0"
description = ""
authors = ["Hristo <sandevh@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"
redis = "^5.2.0"
langchain = "^0.3.9"
langchain-openai = "^0.2.11"
pypdf2 = "^3.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
